fixed a problem with page display

--- a/client/src/pages/RoutesPage.css
+++ b/client/src/pages/RoutesPage.css
@@ -136,3 +136,8 @@
     font-size: 18px;
     color: #666;
 }
+
+.profile-container, .routes-page, .container {
+    display: block !important;
+    visibility: visible !important;
+}
